# rizhiy.com

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test_and_version.yml
other/: rizhiy_com.nginx  waitress.service
rizhiy_com/: __init__.py  auth.py  blog.py  db.py  index.py  schema.sql  utils.py  wishlist.py
rizhiy_com/static/: form.css  icons.css  links.js  main.css  main.js  main.scss  navbar.css  wishlist.css
rizhiy_com/templates/: base.html  base.html.jinja  index.html.jinja
rizhiy_com/templates/auth/: base.html.jinja  login.html  login.html.jinja  register.html  register.html.jinja
rizhiy_com/templates/blog/: create.html  index.html  update.html
rizhiy_com/templates/wishlist/: add.html.jinja  edit.html.jinja  index.html.jinja
scripts/: init_prod.sh  update_prod.sh
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py  test_utils.py  test_wishlist.py
